Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81674

Unexpected detach on setColorTable after QImage::QImage(const uchar *data, ...)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.4.0 Beta1
    • 5.12.5
    • GUI: Painting
    • None
    • f9df8512c2 (qt/qtbase/dev) f9df8512c2 (qt/tqtc-qtbase/dev) f9df8512c2 (qt/tqtc-qtbase/6.4)

      QImage offers two constructors that uses an existing read-only memory buffer given via const char*. If the image format is indexed, documentation requires the user to call "setColorCount() or setColorTable() before the image is used."

      However, doing so forces detaching, which is against the purpose of using this constructor in the first place. It should be possible to at least initialize the color table without detaching.

        For Gerrit Dashboard: QTBUG-81674
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            dg0yt Kai Pastor
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes